# rao

./: CMakeLists.txt  COPYING  README.md
cmake/: globals.cmake  release.cmake
dependencies/common/: install-common  install-packages  install-ripgrep
dependencies/windows/: Install-RStudio-Prereqs.ps1  README.md  install-dependencies.cmd
docker/jenkins/: notarize-release.sh
docs/: conversation-files-protocol.md  rao-backend-protocol.md
jenkins/: Jenkinsfile.windows
package/: CMakeLists.txt
package/linux/: .gitignore  CMakeLists.txt  make-package
package/osx/: make-package
package/osx/cmake/: codesign-package-electron.cmake  merge-electron.cmake  prepare-package.cmake
package/osx/scripts/: codesign-package.sh
package/win32/: CMakeLists.txt  make-package.bat
scripts/: clean-rstudio
src/cpp/: CMakeLists.txt
src/cpp/conf/: rdesktop-dev.conf  rsession-dev.conf
src/cpp/r/R/: Api.R  AppCommands.R
src/cpp/server/: ServerMain.cpp
src/cpp/session/: CMakeLists.txt  SessionClientEvent.cpp  SessionClientInit.cpp  SessionConsoleProcess.cpp  SessionConsoleProcessApi.cpp  SessionConsoleProcessSocket.cpp  SessionMain.cpp  SessionModuleContext.cpp  SessionOptions.cpp
src/cpp/session/modules/: RStudioAPI.cpp  SessionAi.cpp  SessionAi.hpp  SessionAiAPI.R  SessionAiAttachments.R  SessionAiBackendComms.R  SessionAiButtons.R  SessionAiContext.R  SessionAiConversationDisplay.R  (+16 more)
src/cpp/tools/: install-r-devel.cmd  install-r.cmd
src/gwt/www/: index.htm
src/node/desktop/: CMakeLists.txt  Info.plist.in  forge.config.js  package-lock.json  package.json
(+178 files in other folders)
